# Soteria

./: .gitignore  AGENTS.md  README.md  render.yaml
src/backend/: .dockerignore  Dockerfile.poller  Dockerfile.web  README.md  main.py  pyproject.toml
src/backend/agent/: client.py  command_catalog.py  command_policy.py  command_runbook_generation.py  command_runbook_persistence.py  definition.py  openc3_runbook_renderer.py  report_generation.py  report_models.py  report_pipeline.py  service.py  tools.py
src/backend/agent/catalogs/: nos3_openc3_v1_07_04_cmdcat_20260621.json
src/backend/api/: agent.py  operations.py  poller.py
src/backend/data/airflow/: requirements.txt
src/backend/data/airflow/dags/: spaceweather_dag.py  swpc_event_windows_dag.py
src/backend/data/airflow/include/: neon_db_writer.py
src/backend/data/airflow/include/swpc/: fetch.py  forecast_records.py  pipeline.py  supabase_schema.sql
src/backend/data/airflow/tests/include/: test_supabase_swpc_writer.py
src/backend/data/util/: classifier.py
src/backend/scripts/: live_poller_report_validation.py  render_endpoint_smoke_test.py  render_poller_pipeline_validation.py  seed_fake_space_weather_events.py
src/backend/tests/: test_agent_api.py  test_agent_command_tools.py  test_command_catalog.py  test_command_policy.py  test_command_runbook_generation.py  test_openc3_runbook_renderer.py  test_operations_api.py  test_poller_http_dispatcher.py  test_render_config.py  test_render_poller_pipeline_validation.py  test_report_generation.py  test_report_models.py  test_report_pipeline.py
(+91 files in other folders)
