[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.2",
    "claude-agent-sdk>=0.2.106",
    "fastapi>=0.138.0",
    "pendulum>=3.2.0",
    "python-dotenv>=1.2.1",
    "redis>=6.4.0",
    "supabase>=2.24.0",
]
